loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:1: error: '<-' expected but ')' found.
for (computer < 1 to 8) {
                      ^LoopCourse:6: error: illegal start of simple expression
	}
        ^